--- a/ChessGame/ChessUI/PauseMenu.xaml
+++ b/ChessGame/ChessUI/PauseMenu.xaml
@@ -18,10 +18,10 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.ColumnSpan="2" Text="RESTART GAME?" Style="{StaticResource TextStyle}" FontSize="28"/>
+            <TextBlock Grid.ColumnSpan="2" Text="НАЧАТЬ ЗАНОВО?" Style="{StaticResource TextStyle}" FontSize="28"/>
 
-            <Button Grid.Row="2" Content="CONTINUE" Style="{StaticResource ButtonStyle}" Width="80" Height="30" Click="Continue_Click"/>
-            <Button Grid.Row="2" Grid.Column="1" Content="RESTART" Style="{StaticResource ButtonStyle}" Width="80" Height="30" Click="Restart_Click"/>
+            <Button Grid.Row="2" Content="ПРОДОЛЖИТЬ" Style="{StaticResource ButtonStyle}" Width="80" Height="30" Click="Continue_Click"/>
+            <Button Grid.Row="2" Grid.Column="1" Content="НАЧАТЬ ЗАНОВО" Style="{StaticResource ButtonStyle}" Width="80" Height="30" Click="Restart_Click"/>
         </Grid>
     </Border>
 </UserControl>
